# JvmRamCostMonitor

./: .gitignore  .prettierrc.json  LICENSE  README.md  bak.process-panel.svelte_  build.gradle  config.py  gradle.properties  jmx_client.py  main.py  memory_monitor.py  package-lock.json  package.json  process_manager.py  pyrightconfig.json  requirements.txt  settings.gradle  svelte.config.js  vite.config.js
.github/workflows/: ci.yml  gradle-publish.yml
app-backend/: app-backend.gradle
app-backend/src/main/java/: module-info.java
app-swing-ui/: app-swing-ui.gradle
app-swing-ui/src/main/java/: module-info.java
core/: core.gradle
dist-app-backend/: dist-app-backend.gradle  proguard-rules.pro
dist-app-swing-ui/: dist-app-swing-ui.gradle
gradle/: libs.versions.toml
licenses/: NOTICE
metrics/: __init__.py  metrics.py
model/: model.gradle
proto/: protocol.proto
scripts/: proto-gen.bat  proto-gen.sh
src/: app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Debouncer.ts  GraphMeta.ts  GraphStore.ts  MetricList.svelte  ProcHandle.ts  ProtoAdapter.ts  utils.svelte
src/lib/graph/: GraphRenderer.ts  constants.ts  formatters.ts  index.ts  types.ts
src/routes/: +layout.svelte  +page.svelte  MetricList.svelte  ProcessList.svelte  process-panel.svelte
src/routes/[pid]/: +page.svelte  GraphPlot.svelte
static/: shared.css
suppliers/: __init__.py  jmx.py  suppliers.py
ui/: __init__.py  controls_panel.py  graph_panel.py  main_window.py  process_panel.py
(+138 files in other folders)
