[package]
name = "jvm-ram-cost"
version = "0.1.0"
description = "A Tauri App"
authors = ["Aleksandr Vasilev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jvm_ram_cost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.14.1"
tonic = "0.14.2"
tokio = { version = "1.49.0", features = ["macros"] }
tonic-prost = "0.14.2"
thiserror = "2.0.17"

